@@ -1,4 +1,8 @@
 2000-11-27  Tristan Tarrant <nadir@users.sourceforge.net>
+	* bggame.c: load the right palette for credits/quotes,
+	  corrected horizontal spacing of menu font
+
+2000-11-27  Tristan Tarrant <nadir@users.sourceforge.net>
 	* data/palette_fades.shp: new shape
 	* game.cc: allow user to enable/disable fades
 	* menulist.h: return index of entry in menu from add_entry
